--- a/node_test_v1/views/lecturerDashboard.ejs
+++ b/node_test_v1/views/lecturerDashboard.ejs
@@ -28,7 +28,7 @@
           <% courses.forEach(course => { %>
             <div class="bg-gray-800 border border-gray-700 rounded-lg p-4 flex justify-between items-center">
               <span class="font-semibold"><%= course.course_code %></span>
-              <a href="course?id=<%= course.course_id %>"
+              <a href="course/<%= course.course_id %>"
                  class="px-4 py-2 bg-cyan-600 hover:bg-cyan-500 rounded-lg font-medium">
                 Enter
               </a>
